# Final-Project

./: .env.example  .gitignore  ARCHITECTURE.md  COST_PLAN.md  DECISIONS.md  DEMO_PLAN.md  PROJECT_PLAN.md  README.md  RISK_REGISTER.md  TASKS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/architecture/: architecture-overview.md
docs/screenshots/: SCREENSHOT_CHECKLIST.md
docs/stage-guides/: phase-01-planning-and-architecture.md  phase-02-local-python-environment.md
scripts/: validate_environment.py
tests/: test_validate_environment.py
